@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-13T08:21:55Z",
-  "count_outdated" : 74,
-  "uniques_outdated" : 53,
-  "count" : 125,
+  "timestamp" : "2022-04-14T01:25:09Z",
+  "count_outdated" : 83,
+  "uniques_outdated" : 57,
+  "count" : 126,
   "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-03-30T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 0, 9 ],
-      "uniques": 4,
-      "uniques_minmax": [ 0, 4 ]
-    },
     {
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 13,
