@@ -1,12 +1,7 @@
 {
-  "count": 51,
+  "count": 43,
   "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2022-03-30T00:00:00Z",
-      "count": 8,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 13,
